# gizmo

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  README.md  build.zig  build.zig.zon
app/: app.cc  app.h  main.cc
include/gizmo/: audio.h  cartridge.h  cpu.h  io.h  memory.h  registers.h  serial_data.h  timer_divider.h  vram.h
include/gizmo/cartridge/: rom_only.h
include/gizmo/cpu/: registers.h
include/gizmo/io/: serial_data.h  timer_divider.h
include/gizmo/memory/: vram.h
src/: cartridge.c  cartridge.rs  cartridge.zig  clock.rs  cpu.c  cpu.rs  cpu.zig  display.rs  instructions.c  instructions.rs  interrupts.c  io.c  io.rs  io.zig  joypad.c  log.cc  main.rs  memory.c  memory.rs  memory.zig  registers.c  registers.rs  system.c  timer.c  vram.zig
src-app/: main.cc  state.cc  state.h
src/cartridge/: cart_type.rs  header.rs  header.zig  mbc1.c  mbc1.rs  mbc2.rs  mbc3.rs  mbc5.rs  rom.rs  rom_only.c  rom_only.zig
src/cpu/: registers.zig
src/display/: oam.rs  vram.rs
src/graphics/: oam.zig
src/include/gizmo/: cartridge.h  cpu.h  instructions.h  interrupts.h  io.h  joypad.h  log.h  memory.h  ppu.h  registers.h  serial.h  system.h  timer.h  types.h
src/include/gizmo/cartridge/: mbc1.h  rom_only.h
src/instructions/: reader.rs
src/interrupts/: interrupt_enable.zig
src/memory/: constants.zig
src/registers/: flag.rs
tests/: hello_world.cpp
